add for_loop to check the queried sites. additional comments

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,12 @@
 [azure]
-clientId = [YOUR CLIENT_ID HERE]
+clientId = [ YOUR CLIENT ID HERE ]
 clientSecret = [YOUR CLIENT SECRET HERE]
-tenantId = [YOUR TENANT ID HERE]
-authTenant = [YOUR TENANT ID HERE]
+tenantId = [ YOUR TENANT ID HERE ]
+authTenant = [ YOUR TENANT ID HERE ]
 graphUserScopes = user.read mail.read mail.send sites.read.all sites.manage.all files.readwrite.all
+
+[variables]
+SITE_NAME=Test
+DRIVE_NAME=Documents
+DRIVE_PATH=cyber_security_certs
+PATH_OF_DIRECTORY=../CyberCertExamples/
