added comments and get_user_token()

--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,8 @@
 [azure]
-clientId = [ YOUR CLIENT ID HERE ]
+clientId = f4fd2cb5-553f-438b-95a4-1ab4a62a3763
 clientSecret = [YOUR CLIENT SECRET HERE]
-tenantId = [ YOUR TENANT ID HERE ]
-authTenant = [ YOUR TENANT ID HERE ]
+tenantId = 7824f42c-45bd-47d8-8d15-275c536fa0a2
+authTenant = 7824f42c-45bd-47d8-8d15-275c536fa0a2
 graphUserScopes = user.read mail.read mail.send sites.read.all sites.manage.all files.readwrite.all
 
 [variables]
